[gd_scene load_steps=5 format=3 uid="uid://dgfboan7tbjos"]

[ext_resource type="Script" path="res://ScheduleManager/schedule_manager.gd" id="1_2jecb"]
[ext_resource type="Texture2D" uid="uid://ck22lg7ds7ovc" path="res://UI/Images/text_input.png" id="2_1c54y"]
[ext_resource type="Theme" uid="uid://56nx8cnihqa2" path="res://UI/Themes/my_line_edit_theme.tres" id="3_4b6t3"]
[ext_resource type="Theme" uid="uid://wgr8ngf3t34r" path="res://UI/Themes/my_button_theme.tres" id="4_r12n7"]

[node name="NewSchedule" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2jecb")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="InputsContainer" type="VBoxContainer" parent="Background"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.396
anchor_top = 0.093
anchor_right = 0.604
anchor_bottom = 0.329
offset_left = -0.320068
offset_top = -0.440002
offset_right = 0.319946
offset_bottom = -0.320038
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="ScheduleNameInputBackground" type="NinePatchRect" parent="Background/InputsContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
texture = ExtResource("2_1c54y")
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="ScheduleNameInput" type="LineEdit" parent="Background/InputsContainer/ScheduleNameInputBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.17
anchor_right = 0.966
anchor_bottom = 0.81
offset_left = 0.200001
offset_right = 0.199982
theme = ExtResource("3_4b6t3")
placeholder_text = "Enter New Schedule Name..."

[node name="ErrorLabel" type="Label" parent="Background/InputsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AddScheduleButton" type="Button" parent="Background/InputsContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("4_r12n7")
text = "Add Schedule"

[node name="SchedulesScrollContainer" type="ScrollContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.161
anchor_top = 0.37
anchor_right = 0.839
anchor_bottom = 0.704
offset_left = 0.879974
offset_top = 0.399994
offset_right = -0.880127
offset_bottom = -0.320068
grow_horizontal = 2
grow_vertical = 2

[node name="SchedulesContainer" type="GridContainer" parent="Background/SchedulesScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 30
columns = 3

[node name="DeleteDataButton" type="Button" parent="Background"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.74
anchor_top = 0.815
anchor_right = 0.948
anchor_bottom = 0.907
offset_left = -0.800049
offset_top = -0.200073
offset_right = -0.160156
offset_bottom = 0.439941
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_r12n7")
text = "Delete Data"

[connection signal="pressed" from="Background/InputsContainer/AddScheduleButton" to="." method="_on_add_schedule_button_pressed"]
[connection signal="pressed" from="Background/DeleteDataButton" to="." method="_on_delete_data_button_pressed"]
